package com.example.javaexam.models;

import com.example.javaexam.models.enums.Role;
import com.example.javaexam.models.enums.Status;
import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.EnumType;
import jakarta.persistence.Enumerated;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.Table;
import java.time.LocalDateTime;
import java.util.Collection;
import java.util.List;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;
import org.hibernate.annotations.CreationTimestamp;
import org.hibernate.annotations.UpdateTimestamp;
import org.springframework.security.core.GrantedAuthority;
import org.springframework.security.core.authority.SimpleGrantedAuthority;
import org.springframework.security.core.userdetails.UserDetails;

/**
 * Application user and Spring Security principal.
 *
 * <p>Implements {@link UserDetails} so it can be used directly by Spring
 * Security. Authentication is performed by {@code email} (returned from
 * {@link #getUsername()}), and {@link #isEnabled()} is backed by the
 * {@code enabled} flag, which is only set to {@code true} once the user has
 * verified their email address.
 */
@Entity
@Table(name = "users")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class User implements UserDetails {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(name = "first_name", nullable = false, length = 100)
    private String firstName;

    @Column(name = "last_name", nullable = false, length = 100)
    private String lastName;

    @Column(nullable = false, unique = true)
    private String email;

    /** Country dialing code, e.g. {@code +250} for Rwanda (the default). */
    @Column(name = "country_code", nullable = false, length = 5)
    @Builder.Default
    private String countryCode = "+250";

    /** Subscriber number without the country code, e.g. {@code 788123456}. */
    @Column(name = "phone_number", length = 20)
    private String phoneNumber;

    @Column(nullable = false)
    private String password;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false, length = 50)
    @Builder.Default
    private Role role = Role.CUSTOMER;

    /**
     * Email-verification flag: {@code false} until the user confirms their
     * email. This is distinct from {@link #status}, which is the admin-managed
     * Active/Inactive state.
     */
    @Column(nullable = false)
    @Builder.Default
    private boolean enabled = false;

    /** Admin-managed Active/Inactive state; an inactive user cannot log in. */
    @Enumerated(EnumType.STRING)
    @Column(nullable = false, length = 20)
    @Builder.Default
    private Status status = Status.ACTIVE;

    /**
     * Incremented to invalidate every access and refresh token the user holds.
     * Tokens embed the version they were issued with; a mismatch is rejected.
     * Bumped by logout-all, change-password, and password reset.
     */
    @Column(name = "token_version", nullable = false)
    @Builder.Default
    private int tokenVersion = 0;

    @CreationTimestamp
    @Column(name = "created_at", nullable = false, updatable = false)
    private LocalDateTime createdAt;

    @UpdateTimestamp
    @Column(name = "updated_at", nullable = false)
    private LocalDateTime updatedAt;

    @Override
    public Collection<? extends GrantedAuthority> getAuthorities() {
        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
    }

    @Override
    public String getPassword() {
        return password;
    }

    /** Spring Security uses the email address as the username. */
    @Override
    public String getUsername() {
        return email;
    }

    @Override
    public boolean isEnabled() {
        return enabled;
    }

    /** An inactive account is treated as locked, so Spring Security blocks login. */
    @Override
    public boolean isAccountNonLocked() {
        return status == Status.ACTIVE;
    }
}
