-- ===================================================================
-- V3: Unified auth token table
-- ===================================================================

CREATE TABLE auth_tokens (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    type        VARCHAR(50)  NOT NULL,
    token       VARCHAR(255) NOT NULL,
    user_id     BIGINT,
    expires_at  TIMESTAMP    NOT NULL,
    consumed_at TIMESTAMP,
    revoked_at  TIMESTAMP,
    created_at  TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_auth_tokens_type_token UNIQUE (type, token),
    CONSTRAINT fk_auth_tokens_user FOREIGN KEY (user_id)
        REFERENCES users (id) ON DELETE CASCADE
);

INSERT INTO auth_tokens (type, token, user_id, expires_at, consumed_at, created_at)
SELECT 'EMAIL_VERIFICATION', token, user_id, expires_at, confirmed_at, created_at
FROM verification_tokens;

INSERT INTO auth_tokens (type, token, user_id, expires_at, consumed_at, created_at)
SELECT 'PASSWORD_RESET', token, user_id, expires_at, used_at, created_at
FROM password_reset_tokens;

INSERT INTO auth_tokens (type, token, expires_at, revoked_at, created_at)
SELECT 'REFRESH_REVOCATION', jti, expires_at, revoked_at, revoked_at
FROM revoked_refresh_tokens;

CREATE INDEX idx_auth_tokens_type_token ON auth_tokens (type, token);
CREATE INDEX idx_auth_tokens_user_id ON auth_tokens (user_id);
CREATE INDEX idx_auth_tokens_expires_at ON auth_tokens (expires_at);

DROP TABLE password_reset_tokens;
DROP TABLE verification_tokens;
DROP TABLE revoked_refresh_tokens;
