-- ===================================================================
-- V4: Utility billing schema
--   customers, meters, meter readings, tariffs (versioned, tiered),
--   bills, payments, and notifications.
--   Portable DDL: runs on PostgreSQL (runtime) and H2/PostgreSQL mode (tests).
-- ===================================================================

-- --- Task 1 follow-up: phone number + align roles to the exam's role set -----
ALTER TABLE users ADD COLUMN phone_number VARCHAR(20);
UPDATE users SET role = 'CUSTOMER' WHERE role = 'USER';
ALTER TABLE users ALTER COLUMN role SET DEFAULT 'CUSTOMER';

-- --- Task 2: Customers --------------------------------------------------------
CREATE TABLE customers (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    full_name    VARCHAR(150) NOT NULL,
    national_id  VARCHAR(16)  NOT NULL,
    email        VARCHAR(255) NOT NULL,
    phone_number VARCHAR(20)  NOT NULL,
    address      VARCHAR(255),
    status       VARCHAR(20)  NOT NULL DEFAULT 'ACTIVE',
    created_at   TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at   TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_customers_national_id UNIQUE (national_id),
    CONSTRAINT uq_customers_email UNIQUE (email)
);

-- --- Task 2: Meters ----------------------------------------------------------
CREATE TABLE meters (
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    meter_number      VARCHAR(20) NOT NULL,
    meter_type        VARCHAR(20) NOT NULL,
    installation_date DATE        NOT NULL,
    status            VARCHAR(20) NOT NULL DEFAULT 'ACTIVE',
    customer_id       BIGINT      NOT NULL,
    created_at        TIMESTAMP   NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at        TIMESTAMP   NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_meters_meter_number UNIQUE (meter_number),
    CONSTRAINT fk_meters_customer FOREIGN KEY (customer_id)
        REFERENCES customers (id) ON DELETE CASCADE
);
CREATE INDEX idx_meters_customer_id ON meters (customer_id);

-- --- Task 3: Meter readings --------------------------------------------------
-- One reading per meter per month/year is enforced by uq_meter_readings_period.
CREATE TABLE meter_readings (
    id               BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    meter_id         BIGINT        NOT NULL,
    previous_reading NUMERIC(14,3) NOT NULL,
    current_reading  NUMERIC(14,3) NOT NULL,
    consumption      NUMERIC(14,3) NOT NULL,
    reading_date     DATE          NOT NULL,
    reading_year     INTEGER       NOT NULL,
    reading_month    INTEGER       NOT NULL,
    recorded_by      BIGINT,
    created_at       TIMESTAMP     NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_meter_readings_meter FOREIGN KEY (meter_id)
        REFERENCES meters (id) ON DELETE CASCADE,
    CONSTRAINT fk_meter_readings_user FOREIGN KEY (recorded_by)
        REFERENCES users (id) ON DELETE SET NULL,
    CONSTRAINT uq_meter_readings_period UNIQUE (meter_id, reading_year, reading_month)
);
CREATE INDEX idx_meter_readings_meter_id ON meter_readings (meter_id);

-- --- Task 4: Tariffs (versioned) + consumption tiers -------------------------
-- A flat tariff is modelled as a single tier spanning [0, +inf).
CREATE TABLE tariffs (
    id             BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    meter_type     VARCHAR(20)   NOT NULL,
    version        INTEGER       NOT NULL,
    service_charge NUMERIC(14,2) NOT NULL DEFAULT 0,
    vat_rate       NUMERIC(6,2)  NOT NULL DEFAULT 0,
    penalty_rate   NUMERIC(6,2)  NOT NULL DEFAULT 0,
    effective_from DATE          NOT NULL,
    description    VARCHAR(255),
    created_at     TIMESTAMP     NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_tariffs_type_version UNIQUE (meter_type, version)
);
CREATE INDEX idx_tariffs_type_effective ON tariffs (meter_type, effective_from);

CREATE TABLE tariff_tiers (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tariff_id     BIGINT        NOT NULL,
    min_units     NUMERIC(14,3) NOT NULL,
    max_units     NUMERIC(14,3),
    rate_per_unit NUMERIC(12,4) NOT NULL,
    CONSTRAINT fk_tariff_tiers_tariff FOREIGN KEY (tariff_id)
        REFERENCES tariffs (id) ON DELETE CASCADE
);
CREATE INDEX idx_tariff_tiers_tariff_id ON tariff_tiers (tariff_id);

-- --- Task 5/6: Bills ---------------------------------------------------------
CREATE TABLE bills (
    id                  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    bill_number         VARCHAR(40)   NOT NULL,
    customer_id         BIGINT        NOT NULL,
    meter_id            BIGINT        NOT NULL,
    reading_id          BIGINT        NOT NULL,
    tariff_id           BIGINT        NOT NULL,
    billing_year        INTEGER       NOT NULL,
    billing_month       INTEGER       NOT NULL,
    consumption         NUMERIC(14,3) NOT NULL,
    consumption_charge  NUMERIC(14,2) NOT NULL,
    service_charge      NUMERIC(14,2) NOT NULL,
    tax_amount          NUMERIC(14,2) NOT NULL,
    penalty_amount      NUMERIC(14,2) NOT NULL DEFAULT 0,
    total_amount        NUMERIC(14,2) NOT NULL,
    amount_paid         NUMERIC(14,2) NOT NULL DEFAULT 0,
    outstanding_balance NUMERIC(14,2) NOT NULL,
    penalty_applied     BOOLEAN       NOT NULL DEFAULT FALSE,
    status              VARCHAR(30)   NOT NULL DEFAULT 'PENDING',
    due_date            DATE          NOT NULL,
    created_at          TIMESTAMP     NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at          TIMESTAMP     NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_bills_bill_number UNIQUE (bill_number),
    CONSTRAINT uq_bills_reading UNIQUE (reading_id),
    CONSTRAINT fk_bills_customer FOREIGN KEY (customer_id) REFERENCES customers (id),
    CONSTRAINT fk_bills_meter FOREIGN KEY (meter_id) REFERENCES meters (id),
    CONSTRAINT fk_bills_reading FOREIGN KEY (reading_id) REFERENCES meter_readings (id),
    CONSTRAINT fk_bills_tariff FOREIGN KEY (tariff_id) REFERENCES tariffs (id)
);
CREATE INDEX idx_bills_customer_id ON bills (customer_id);
CREATE INDEX idx_bills_status ON bills (status);

-- --- Task 5: Payments --------------------------------------------------------
CREATE TABLE payments (
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    payment_reference VARCHAR(40)   NOT NULL,
    bill_id           BIGINT        NOT NULL,
    amount            NUMERIC(14,2) NOT NULL,
    method            VARCHAR(30)   NOT NULL,
    payment_date      DATE          NOT NULL,
    recorded_by       BIGINT,
    created_at        TIMESTAMP     NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_payments_reference UNIQUE (payment_reference),
    CONSTRAINT fk_payments_bill FOREIGN KEY (bill_id)
        REFERENCES bills (id) ON DELETE CASCADE,
    CONSTRAINT fk_payments_user FOREIGN KEY (recorded_by)
        REFERENCES users (id) ON DELETE SET NULL
);
CREATE INDEX idx_payments_bill_id ON payments (bill_id);

-- --- Task 6: Notifications (rows are inserted by database triggers) -----------
CREATE TABLE notifications (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    customer_id BIGINT        NOT NULL,
    bill_id     BIGINT,
    type        VARCHAR(30)   NOT NULL,
    message     VARCHAR(1000) NOT NULL,
    created_at  TIMESTAMP     NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_notifications_customer FOREIGN KEY (customer_id)
        REFERENCES customers (id) ON DELETE CASCADE,
    CONSTRAINT fk_notifications_bill FOREIGN KEY (bill_id)
        REFERENCES bills (id) ON DELETE CASCADE
);
CREATE INDEX idx_notifications_customer_id ON notifications (customer_id);
